/*
 * Copyright (c) 2016 Alex de Kruijff <alex.de.kruijff@MazarineBlue.org>
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Affero General Public License
 * as published by the Free Software Foundation; either version 3
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
package org.mazarineblue.eventdriven;

import org.mazarineblue.eventbus.Event;

/**
 * An {@code Invoker} is representation of the object that publishes
 * {@link Event Events} to {@link Subscriber Subscribers}.
 *
 * @author Alex de Kruijff <alex.de.kruijff@MazarineBlue.org>
 */
public interface Invoker {

    /* Invoker should not extends Chain. Although Invoker defines many of the
     * same methods as Chain, it is conceptually a different thing. 
     */
    /**
     * Counts the link in the chain.
     *
     * @return the amount of links in the chain.
     */
    public int countLinks();

    /**
     * Adds a link to the front of the chain.
     *
     * @param link to add to the chain.
     */
    public void addLink(Link link);

    /**
     * Adds a link behind another link in the chain.
     *
     * @param link  to add to the chain.
     * @param after insert link after this link.
     */
    public void addLink(Link link, Link after);

    /**
     * Removes the specified link from the chain.
     *
     * @param link to remove from the chain.
     */
    public void removeLink(Link link);

    /**
     * Publish a new event on the bus.
     *
     * @param event the event to publish.
     */
    public void publish(Event event);
}
