/*
 * Copyright (c) 2015-2016 Alex de Kruijff <alex.de.kruijff@MazarineBlue.org>
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Affero General Public License
 * as published by the Free Software Foundation; either version 3
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
package org.mazarineblue.eventdriven;

import java.io.Serializable;
import org.mazarineblue.eventbus.Event;
import org.mazarineblue.eventbus.ReflectionSubscriber;
import org.mazarineblue.utililities.Immutable;

/**
 * An {@code link} is an element in {@link Chain Chains} used by
 * {@link Interpreter Interpreters} to publish {@link Event Events}.
 * <p>
 * It allows for behavioral modification of {@code Interpreters}. This is done
 * by adding or removing link to the {@code Chain}.
 *
 * @author Alex de Kruijff <alex.de.kruijff@MazarineBlue.org>
 */
@Immutable
public abstract class Link
        extends ReflectionSubscriber<Event>
        implements Serializable {

    private static final long serialVersionUID = 1L;
}
