/*
 * Copyright (c) 2012 Alex de Kruijff <alex.de.kruijff@MazarineBlue.org>
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * 1. Redistributions of source code must retain the above copyright notice,
 *    this list of conditions and the following disclaimer.
 *
 * 2. Redistributions in binary form must reproduce the above copyright notice,
 *    this list of conditions and the following disclaimer in the documentation
 *    and/or other materials provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY THE AUTHOR "AS IS" AND ANY EXPRESS OR IMPLIED
 * WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
 * MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO
 * EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
 * SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
 * OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */
package org.mazarineblue.eventbus;

import java.util.Date;

/**
 * An event is an message that something has happened or a request for
 * something to happen.
 * <p>
 * A copy constructor can be required, unless the event only has a default
 * constructor and the state of the event is not modified before publishing.
 *
 * @author Alex de Kruijff <alex.de.kruijff@MazarineBlue.org>
 */
public interface Event {

    /**
     * Returns the {@link State status} of the {@code Event}.
     * <p>
     * The state {@code OK} indicates that the process has not been processes
     * or that there where no problem during handling. The state {@code WARNING}
     * indicates there a potentially harmful situation occurred, but the
     * {@link EventHandler} was able to process the {@code Event}. And the state
     * {@code ERROR} indicates that something prevented the {@code EventHandler}
     * to process the {@code Event} fully.
     *
     * @return the state the {@code Event} is in.
     */
    public Status status();

    /**
     * Returns a string representation of the event message.
     *
     * @return an empty string when there was no message.
     */
    public String message();

    /**
     * Returns a string representation of the response on the event message.
     *
     * @return an empty string when there was no response.
     */
    public String responce();

    /**
     * Indicates if this event was consumed.
     *
     * @return true if this message was consumed.
     */
    public boolean isConsumed();

    /**
     * Returns the data and time when this event was first consumed.
     *
     * @return null if this event was not (jet) consumed.
     */
    public Date dateConsumed();

    /**
     * Changes the state of the event to consumed.
     */
    public void setConsumed();

    /**
     * Status indicates the result of an {@link EventHandler}.
     * <p>
     * The state {@code OK} indicates that the process has not been processes
     * or that there where no problem during handling. The state {@code WARNING}
     * indicates there a potentially harmful situation occurred, but the
     * {@link EventHandler} was able to process the {@link Event}. And the state
     * {@code ERROR} indicates that something prevented the {@code EventHandler}
     * to process the {@code Event} fully.
     */
    enum Status {

        OK,
        WARNING,
        ERROR,
    }
}
